tests/NormalTests/paczka1/fuzzy1/30614580.err
Error in line 7: 8hj65Eg S218 19,4
Error in line 11: eMddODcNv5 A535 61,3
Error in line 3: v9TJYjl S928 2,2
Error in line 17: v9TJYjl A135 37,5
Error in line 20: 5CfcbpT4c A135 36,0
Error in line 24: A135 S218 125,8
